2011-03-21  Adam Roben  <aroben@apple.com>

        Fix multiple-definition linker warnings on Windows

        * WebCore.vcproj/WebCore.vcproj: Exclude RenderSVGPath.cpp from the build, since it is
        already being compiled via RenderingAllInOne.cpp. Let VS have its way with the rest of the
        file.

2011-03-21  Andreas Kling  <kling@webkit.org>

        Reviewed by Benjamin Poulain.

        [Qt] Clean up QNetworkReplyHandler::release()

        Since QNetworkReplyHandler no longer uses queued connections to
        the QNetworkReply, it's not necessary to mess with the event
        queue when releasing a reply.

        * platform/network/qt/QNetworkReplyHandler.cpp:
        (WebCore::QNetworkReplyHandler::abort):
        (WebCore::QNetworkReplyHandler::release):

2011-03-21  Vsevolod Vlasov  <vsevik@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: Inspector does not always show correct transfer size (for compressed/chunked data)
        https://bugs.webkit.org/show_bug.cgi?id=56691

        Added transfer size support in inspector for compressed data.

        Test: http/tests/inspector/network/network-size-chunked.html

        * inspector/Inspector.idl:
        * inspector/InspectorInstrumentation.cpp:
        (WebCore::InspectorInstrumentation::didReceiveContentLengthImpl):
        * inspector/InspectorInstrumentation.h:
        (WebCore::InspectorInstrumentation::didReceiveContentLength):
        * inspector/InspectorResourceAgent.cpp:
        (WebCore::InspectorResourceAgent::didReceiveResponse):
        (WebCore::InspectorResourceAgent::didReceiveContentLength):
        * inspector/InspectorResourceAgent.h:
        * inspector/front-end/NetworkManager.js:
        (WebInspector.NetworkDispatcher.prototype.didReceiveContentLength):
        * inspector/front-end/Resource.js:
        (WebInspector.Resource.prototype.get transferSize):
        (WebInspector.Resource.prototype.increaseTransferSize):